--- a/public/css/login.css
+++ b/public/css/login.css
@@ -98,9 +98,9 @@
     background-color: #fff;
 }
 
-.bar input {
+/* .bar input {
     background-color: #0073ac;
-}
+} */
 .control {
     background-color: #feb21a;
     width: 100%;
@@ -133,6 +133,8 @@
     max-width: 400px;
     padding: 20px 30px;
 }
+
+
 
 /* Untuk device selain desktop */
 @media (max-width: 992px) {
